footer:style about us section padding

--- a/index.html
+++ b/index.html
@@ -262,10 +262,10 @@
 
       <!-- about the company -->
       <div class="text-light p-4">
-        <div class="text-center">
+        <div class="text-center p-4">
           <img src="./assets/logo.svg" alt="logo">
-          <p class="d-inline px-4 ">ZATTIX</p>
-        </div class="p-4">
+          <p class="font-weight-bolder mt-3">ZATTIX</p>
+        </div>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia asperiores nobis voluptatum blanditiis ipsa
           ut
           dolores soluta voluptates voluptate. Perferendis temporibus perspiciatis iste itaque consequuntur, fugiat
