--- a/index.html
+++ b/index.html
@@ -253,7 +253,22 @@
         </div>
       </div>
 
-
+      <!-- pagination from bootstrap -->
+      <div class="mt-3">
+        <nav aria-label="Page navigation">
+          <ul class="pagination justify-content-center">
+            <li class="page-item disabled">
+              <a class="page-link" href="#" tabindex="-1">Previous</a>
+            </li>
+            <li class="page-item"><a class="page-link" href="#">1</a></li>
+            <li class="page-item"><a class="page-link" href="#">2</a></li>
+            <li class="page-item"><a class="page-link" href="#">3</a></li>
+            <li class="page-item">
+              <a class="page-link" href="#">Next</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
     </section>
 
   </main>
@@ -275,29 +290,10 @@
 
       <!-- categories -->
       <div>
-        <h5>Categoris</h5>
-        <div class="d-flex">
-          <div>
-            <ul>
-              <li>Piano</li>
-              <li>Piano</li>
-              <li>Piano</li>
-              <li>Piano</li>
-              <li>Piano</li>
-              <li>Piano</li>
-            </ul>
-          </div>
-          <div>
-            <ul>
-              <li>Piano</li>
-              <li>Piano</li>
-              <li>Piano</li>
-              <li>Piano</li>
-              <li>Piano</li>
-              <li>Piano</li>
-            </ul>
-          </div>
-        </div>
+        <h5>Categories</h5>
+        <ul>
+          <li>Piano</li>
+        </ul>
       </div>
       <!-- nav -->
       <div>
@@ -314,7 +310,6 @@
           </ul>
         </div>
       </div>
-
       <div>
         <form action="#" class="d-flex">
           <div>
