--- a/index.html
+++ b/index.html
@@ -254,27 +254,24 @@
       </div>
 
       <!-- pagination from bootstrap -->
-      <div class="mt-3">
-        <nav aria-label="Page navigation">
-          <ul class="pagination justify-content-center">
-            <li class="page-item disabled">
-              <a class="page-link" href="#" tabindex="-1">Previous</a>
-            </li>
-            <li class="page-item"><a class="page-link" href="#">1</a></li>
-            <li class="page-item"><a class="page-link" href="#">2</a></li>
-            <li class="page-item"><a class="page-link" href="#">3</a></li>
-            <li class="page-item">
-              <a class="page-link" href="#">Next</a>
-            </li>
-          </ul>
-        </nav>
-      </div>
+      <nav aria-label="Page navigation" class="my-3">
+        <ul class="pagination justify-content-center">
+          <li class="page-item disabled">
+            <a class="page-link" href="#" tabindex="-1">Previous</a>
+          </li>
+          <li class="page-item my-2 my-md-0"><a class="page-link" href="#">1</a></li>
+          <li class="page-item my-2 my-md-0"><a class="page-link" href="#">2</a></li>
+          <li class="page-item my-2 my-md-0"><a class="page-link" href="#">3</a></li>
+          <li class="page-item">
+            <a class="page-link" href="#">Next</a>
+          </li>
+        </ul>
+      </nav>
     </section>
 
   </main>
   <footer class="container-fluid">
     <div class="row row-cols-1 row-cols-lg-4">
-
       <!-- about the company -->
       <div class="text-light p-4">
         <div class="text-center p-4">
@@ -290,9 +287,11 @@
 
       <!-- categories -->
       <div>
-        <h5>Categories</h5>
-        <ul>
+        <h5 class="text-center font-weight-bold red">Categories</h5>
+        <ul class="d-flex col-md-2 justify-content-around">
           <li>Piano</li>
+          <li>Violin</li>
+          <li>Guitar</li>
         </ul>
       </div>
       <!-- nav -->
