footer:nav alignment fix using css grid

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
     <div class="row row-cols-1 row-cols-lg-4">
       <!-- about the company -->
       <div class="text-light p-4">
-        <div class="text-center p-4">
+        <div class="text-center">
           <img src="./assets/logo.svg" alt="logo">
           <p class="font-weight-bolder mt-3">ZATTIX</p>
         </div>
@@ -296,20 +296,20 @@
       </div>
       <!-- nav -->
       <div>
-        <div>
-          <ul>
+        <nav>
+          <ul class="d-grid g-c-8 footer-nav-ul">
             <li>Home</li>
             <li>Cart</li>
             <li>My Account</li>
             <li>Orders</li>
-            <li>FAQ</li>
-            <li>Terms and Conditions</li>
+            <li>Favourites</li>
             <li>Contact Us</li>
+            <li>FAQ</li>
             <li>License</li>
           </ul>
-        </div>
+        </nav>
       </div>
-      <div>
+      <div>s
         <form action="#" class="d-flex">
           <div>
             <label for="country">
