--- a/index.html
+++ b/index.html
@@ -255,16 +255,12 @@
 
       <!-- pagination from bootstrap -->
       <nav aria-label="Page navigation" class="my-3">
-        <ul class="pagination justify-content-center">
-          <li class="page-item disabled">
-            <a class="page-link" href="#" tabindex="-1">Previous</a>
-          </li>
-          <li class="page-item my-2 my-md-0"><a class="page-link" href="#">1</a></li>
-          <li class="page-item my-2 my-md-0"><a class="page-link" href="#">2</a></li>
-          <li class="page-item my-2 my-md-0"><a class="page-link" href="#">3</a></li>
-          <li class="page-item">
-            <a class="page-link" href="#">Next</a>
-          </li>
+        <ul class="pagination py-4 justify-content-center">
+          <li class="page-item"><a class="page-link font-weight-bold" href="#">Previous</a></li>
+          <li class="page-item"><a class="page-link" href="#">1</a></li>
+          <li class="page-item"><a class="page-link" href="#">2</a></li>
+          <li class="page-item"><a class="page-link" href="#">3</a></li>
+          <li class="page-item"><a class="page-link font-weight-bold" href="#">Next</a></li>
         </ul>
       </nav>
     </section>
