nav:forms for country currency and language in footer

--- a/index.html
+++ b/index.html
@@ -305,9 +305,9 @@
           </ul>
         </nav>
       </div>
-      <div>s
-        <form action="#" class="d-flex">
-          <div>
+      <div>
+        <form action="#" class="">
+          <div class="">
             <label for="country">
               COUNTRY
             </label>
