fix:remove form from the nav

--- a/index.html
+++ b/index.html
@@ -269,12 +269,13 @@
   <footer class="container-fluid">
     <div class="row row-cols-1 row-cols-lg-4">
       <!-- about the company -->
-      <div class="text-light p-4">
+      <div class="text-light p-md-4">
         <div class="text-center">
           <img src="./assets/logo.svg" alt="logo">
           <p class="font-weight-bolder mt-3">ZATTIX</p>
         </div>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia asperiores nobis voluptatum blanditiis ipsa
+        <p class="d-none d-md-block">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia asperiores nobis
+          voluptatum blanditiis ipsa
           ut
           dolores soluta voluptates voluptate. Perferendis temporibus perspiciatis iste itaque consequuntur, fugiat
           sed
@@ -305,44 +306,65 @@
           </ul>
         </nav>
       </div>
-      <div>
-        <form action="#" class="">
-          <div class="">
-            <label for="country">
-              COUNTRY
-            </label>
-            <label for="language">
-              LANGUAGE
-            </label>
-            <label for="currency">
-              CURRENCY
-            </label>
-          </div>
-          <div>
-            <input type="text" id="country" placeholder="India">
-            <input type="text" id="language" placeholder="English">
-            <input type="text" id="currency" placeholder="$ Dollar">
-          </div>
-        </form>
-      </div>
 
-    </div>
-    <div class="d-md-flex justify-content-between">
       <div>
-        <ul class="d-md-flex flex-nowrap">
-          <li>Zattix.com</li>
-          <li>Created by Samrood Ali</li>
-          <li>Microver Project</li>
-          <li>Copyright</li>
-          <li>All Rights Reserved By Mohammed Awad</li>
-        </ul>
+        <div class="px-5 py-0 my-0">
+          <div class="input-group mb-1">
+            <div class="input-group-prepend">
+              <label class="input-group-text" for="inputGroupSelect01">Options</label>
+            </div>
+            <select class="custom-select" id="inputGroupSelect01">
+              <option selected>Choose...</option>
+              <option value="1">One</option>
+              <option value1"2">Two</option>
+              <option value="3">Three</option>
+            </select>
+          </div>
+        </div>
+        <div class="px-5 py-0 my-0">
+          <div class="input-group mb-1">
+            <div class="input-group-prepend">
+              <label class="input-group-text" for="inputGroupSelect01">Options</label>
+            </div>
+            <select class="custom-select" id="inputGroupSelect02">
+              <option selected>Choose...</option>
+              <option value="1">One</option>
+              <option value="2">Two</option>
+              <option value="3">Three</option>
+            </select>
+          </div>
+        </div>
+        <div class="px-5 py-0 my-0">
+          <div class="input-group mb-1">
+            <div class="input-group-prepend">
+              <label class="input-group-text" for="inputGroupSelect01">Options</label>
+            </div>
+            <select class="custom-select" id="inputGroupSelect03">
+              <option selected>Choose...</option>
+              <option value="1">One</option>
+              <option value="2">Two</option>
+              <option value="3">Three</option>
+            </select>
+          </div>
+        </div>
       </div>
-      <div>
-        <i class="fab  red fa-facebook"></i>
-        <i class="fab  red fa-twitter"></i>
-        <i class="fab  red fa-linkedin"></i>
-        <i class="fab  red fa-instagram"></i>
-        <i class="fab  red fa-tumblr"></i>
+      <div class="d-md-flex justify-content-between">
+        <div>
+          <ul class="d-md-flex flex-nowrap">
+            <li>Zattix.com</li>
+            <li>Created by Samrood Ali</li>
+            <li>Microver Project</li>
+            <li>Copyright</li>
+            <li>All Rights Reserved By Mohammed Awad</li>
+          </ul>
+        </div>
+        <div>
+          <i class="fab  red fa-facebook"></i>
+          <i class="fab  red fa-twitter"></i>
+          <i class="fab  red fa-linkedin"></i>
+          <i class="fab  red fa-instagram"></i>
+          <i class="fab  red fa-tumblr"></i>
+        </div>
       </div>
     </div>
   </footer>
