fix:offsets using padding for options currency and location in footer

--- a/index.html
+++ b/index.html
@@ -311,39 +311,39 @@
         <div class="px-5 py-0 my-0">
           <div class="input-group mb-1">
             <div class="input-group-prepend">
-              <label class="input-group-text" for="inputGroupSelect01">Options</label>
+              <label class="input-group-text" for="inputGroupSelect01">Language</label>
             </div>
             <select class="custom-select" id="inputGroupSelect01">
-              <option selected>Choose...</option>
-              <option value="1">One</option>
-              <option value1"2">Two</option>
-              <option value="3">Three</option>
+              <option selected>English</option>
+              <option value="1">Hindi</option>
+              <option value="2">Malayalam</option>
+              <option value="3">China</option>
             </select>
           </div>
         </div>
         <div class="px-5 py-0 my-0">
           <div class="input-group mb-1">
             <div class="input-group-prepend">
-              <label class="input-group-text" for="inputGroupSelect01">Options</label>
+              <label class="input-group-text option-2" for="inputGroupSelect01">Currency</label>
             </div>
             <select class="custom-select" id="inputGroupSelect02">
-              <option selected>Choose...</option>
-              <option value="1">One</option>
-              <option value="2">Two</option>
-              <option value="3">Three</option>
+              <option selected>Rupees</option>
+              <option value="1">Dollar</option>
+              <option value="2">Euro</option>
+              <option value="3">Yen</option>
             </select>
           </div>
         </div>
         <div class="px-5 py-0 my-0">
           <div class="input-group mb-1">
             <div class="input-group-prepend">
-              <label class="input-group-text" for="inputGroupSelect01">Options</label>
+              <label class="input-group-text option-3" for="inputGroupSelect01">Location</label>
             </div>
             <select class="custom-select" id="inputGroupSelect03">
-              <option selected>Choose...</option>
-              <option value="1">One</option>
-              <option value="2">Two</option>
-              <option value="3">Three</option>
+              <option selected>India</option>
+              <option value="1">America</option>
+              <option value="2">China</option>
+              <option value="3">Africa</option>
             </select>
           </div>
         </div>
