footer:bottom nav links seperated from the rest of the footer

--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
       <!-- categories -->
       <div>
         <h5 class="text-center font-weight-bold red">Categories</h5>
-        <ul class="d-flex col-md-2 justify-content-around">
+        <ul class="d-flex justify-content-around">
           <li>Piano</li>
           <li>Violin</li>
           <li>Guitar</li>
@@ -293,6 +293,7 @@
       </div>
       <!-- nav -->
       <div>
+        <h5 class="font-weight-bold red text-center">Quick Links</h5>
         <nav>
           <ul class="d-grid g-c-8 footer-nav-ul">
             <li>Home</li>
@@ -348,23 +349,23 @@
           </div>
         </div>
       </div>
-      <div class="d-md-flex justify-content-between">
-        <div>
-          <ul class="d-md-flex flex-nowrap">
-            <li>Zattix.com</li>
-            <li>Created by Samrood Ali</li>
-            <li>Microver Project</li>
-            <li>Copyright</li>
-            <li>All Rights Reserved By Mohammed Awad</li>
-          </ul>
-        </div>
-        <div>
-          <i class="fab  red fa-facebook"></i>
-          <i class="fab  red fa-twitter"></i>
-          <i class="fab  red fa-linkedin"></i>
-          <i class="fab  red fa-instagram"></i>
-          <i class="fab  red fa-tumblr"></i>
-        </div>
+    </div>
+    <div class="d-md-flex justify-content-between">
+      <div class="">
+        <ul class="d-md-flex flex-nowrap">
+          <li>Zattix.com</li>
+          <li>Created by Samrood Ali</li>
+          <li>Microver Project</li>
+          <li>Copyright</li>
+          <li>All Rights Reserved By Mohammed Awad</li>
+        </ul>
+      </div>
+      <div>
+        <i class="fab  red fa-facebook"></i>
+        <i class="fab  red fa-twitter"></i>
+        <i class="fab  red fa-linkedin"></i>
+        <i class="fab  red fa-instagram"></i>
+        <i class="fab  red fa-tumblr"></i>
       </div>
     </div>
   </footer>
