footer:added btn-link for button in footer

--- a/index.html
+++ b/index.html
@@ -284,28 +284,30 @@
 
       <!-- categories -->
       <div>
-        <h5 class="text-center font-weight-bold red">Categories</h5>
-        <ul class="d-flex justify-content-around">
-          <li>Piano</li>
-          <li>Violin</li>
-          <li>Guitar</li>
-        </ul>
-      </div>
-      <!-- nav -->
-      <div>
-        <h5 class="font-weight-bold red text-center">Quick Links</h5>
-        <nav>
-          <ul class="d-grid g-c-8 footer-nav-ul">
-            <li>Home</li>
-            <li>Cart</li>
-            <li>My Account</li>
-            <li>Orders</li>
-            <li>Favourites</li>
-            <li>Contact Us</li>
-            <li>FAQ</li>
-            <li>License</li>
+        <div>
+          <h5 class="text-center font-weight-bold red">CATEGORIES</h5>
+          <ul class="d-flex justify-content-around">
+            <li>PIANO</li>
+            <li>VIOLIN</li>
+            <li>GUITAR</li>
           </ul>
-        </nav>
+        </div>
+        <!-- nav -->
+        <div>
+          <h5 class="font-weight-bold red text-center">QUICK LINKS</h5>
+          <nav>
+            <ul class="d-grid g-c-8 footer-nav-ul">
+              <li class="btn-link text-danger">HOME</li>
+              <li class="btn-link text-danger">CART</li>
+              <li class="btn-link text-danger">MY ACCOUNT</li>
+              <li class="btn-link text-danger">ORDERS</li>
+              <li class="btn-link text-danger">FAVOURITES</li>
+              <li class="btn-link text-danger">CONTACT US</li>
+              <li class="btn-link text-danger">FAQ</li>
+              <li class="btn-link text-danger">LICENSE</li>
+            </ul>
+          </nav>
+        </div>
       </div>
 
       <div>
