footer:grid for the footer

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
 
   </main>
   <footer class="container-fluid">
-    <div class="row row-cols-1 row-cols-lg-4">
+    <div class="row row-cols-1 row-cols-lg-3 justify-content-between">
       <!-- about the company -->
       <div class="text-light p-md-4">
         <div class="text-center">
@@ -287,9 +287,9 @@
         <div>
           <h5 class="text-center font-weight-bold red">CATEGORIES</h5>
           <ul class="d-flex justify-content-around">
-            <li>PIANO</li>
-            <li>VIOLIN</li>
-            <li>GUITAR</li>
+            <li class="btn btn-outline-danger text-light">PIANO</li>
+            <li class="btn btn-outline-danger text-light">VIOLIN</li>
+            <li class="btn btn-outline-danger text-light">GUITAR</li>
           </ul>
         </div>
         <!-- nav -->
