footer:nav link style flex for links and width for social icons

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
     </section>
 
   </main>
-  <footer class="container-fluid">
+  <footer class="container-fluid p-0">
     <div class="row row-cols-1 row-cols-lg-3 justify-content-between">
       <!-- about the company -->
       <div class="text-light p-md-4">
@@ -352,22 +352,19 @@
         </div>
       </div>
     </div>
-    <div class="d-md-flex justify-content-between">
-      <div class="">
-        <ul class="d-md-flex flex-nowrap">
-          <li>Zattix.com</li>
-          <li>Created by Samrood Ali</li>
-          <li>Microver Project</li>
-          <li>Copyright</li>
-          <li>All Rights Reserved By Mohammed Awad</li>
-        </ul>
-      </div>
-      <div>
-        <i class="fab  red fa-facebook"></i>
-        <i class="fab  red fa-twitter"></i>
-        <i class="fab  red fa-linkedin"></i>
-        <i class="fab  red fa-instagram"></i>
-        <i class="fab  red fa-tumblr"></i>
+    <div class="d-flex flex justify-content-between bg-charcoal p-0">
+      <ul class="d-flex align-items-center footer-bottom-nav">
+        <li class="text-light small">copyright 2021</li>
+        <li class="text-light small">Microverse Project</li>
+        <li class="text-light small">Samrood Ali</li>
+        <li class="text-light small">All rights reserved by designer Mohammed Awad</li>
+      </ul>
+      <div class="w-25">
+        <i class="fab red fa-facebook"></i>
+        <i class="fab red fa-twitter"></i>
+        <i class="fab red fa-linkedin"></i>
+        <i class="fab red fa-instagram"></i>
+        <i class="fab red fa-tumblr"></i>
       </div>
     </div>
   </footer>
