footer:move social media icons to footer

--- a/index.html
+++ b/index.html
@@ -297,16 +297,26 @@
           <h5 class="font-weight-bold red text-center">QUICK LINKS</h5>
           <nav>
             <ul class="d-grid g-c-8 footer-nav-ul">
-              <li class="btn-link text-danger">HOME</li>
-              <li class="btn-link text-danger">CART</li>
-              <li class="btn-link text-danger">MY ACCOUNT</li>
-              <li class="btn-link text-danger">ORDERS</li>
-              <li class="btn-link text-danger">FAVOURITES</li>
-              <li class="btn-link text-danger">CONTACT US</li>
-              <li class="btn-link text-danger">FAQ</li>
-              <li class="btn-link text-danger">LICENSE</li>
+              <li class="btn-link text-light">HOME</li>
+              <li class="btn-link text-light">CART</li>
+              <li class="btn-link text-light">MY ACCOUNT</li>
+              <li class="btn-link text-light">ORDERS</li>
+              <li class="btn-link text-light">FAVOURITES</li>
+              <li class="btn-link text-light">CONTACT US</li>
+              <li class="btn-link text-light">FAQ</li>
+              <li class="btn-link text-light">LICENSE</li>
             </ul>
           </nav>
+        </div>
+        <div>
+          <h5 class="font-weight-bold red text-center">Reach out to us</h5>
+          <ul class="d-flex justify-content-center">
+            <li><i class="px-3 text-light fab fa-facebook"></i></li>
+            <li><i class="px-3 text-light fab fa-twitter"></i></li>
+            <li><i class="px-3 text-light fab fa-linkedin"></i></li>
+            <li><i class="px-3 text-light fab fa-instagram"></i></li>
+            <li><i class="px-3 text-light fab fa-tumblr"></i></li>
+          </ul>
         </div>
       </div>
 
@@ -352,20 +362,14 @@
         </div>
       </div>
     </div>
-    <div class="d-flex flex justify-content-between bg-charcoal p-0">
+    <div class="d-flex flex justify-content-between bg-charcoal p-3">
       <ul class="d-flex align-items-center footer-bottom-nav">
         <li class="text-light small">copyright 2021</li>
         <li class="text-light small">Microverse Project</li>
         <li class="text-light small">Samrood Ali</li>
         <li class="text-light small">All rights reserved by designer Mohammed Awad</li>
       </ul>
-      <div class="w-25">
-        <i class="fab red fa-facebook"></i>
-        <i class="fab red fa-twitter"></i>
-        <i class="fab red fa-linkedin"></i>
-        <i class="fab red fa-instagram"></i>
-        <i class="fab red fa-tumblr"></i>
-      </div>
+
     </div>
   </footer>
 
