--- a/index.html
+++ b/index.html
@@ -363,11 +363,11 @@
       </div>
     </div>
     <div class="d-flex flex justify-content-between bg-charcoal p-3">
-      <ul class="d-flex align-items-center footer-bottom-nav">
-        <li class="text-light small">copyright 2021</li>
-        <li class="text-light small">Microverse Project</li>
-        <li class="text-light small">Samrood Ali</li>
-        <li class="text-light small">All rights reserved by designer Mohammed Awad</li>
+      <ul class="d-flex flex-wrap align-items-center footer-bottom-nav w-100">
+        <li class="small grey">Copyright 2021</li>
+        <li class="small grey">Microverse capstone project</li>
+        <li class="small grey">SAMROOD ALI project</li>
+        <li class="small grey">designed by MOHAMMED AWAD</li>
       </ul>
 
     </div>
