--- a/index.html
+++ b/index.html
@@ -319,9 +319,9 @@
           </ul>
         </div>
       </div>
-
-      <div>
-        <div class="px-5 py-0 my-0">
+      <!-- language,currency and country -->
+      <div class="footer-options">
+        <div class="py-0 my-0 ">
           <div class="input-group mb-1">
             <div class="input-group-prepend">
               <label class="input-group-text" for="inputGroupSelect01">Language</label>
@@ -334,7 +334,7 @@
             </select>
           </div>
         </div>
-        <div class="px-5 py-0 my-0">
+        <div class="py-0 my-0">
           <div class="input-group mb-1">
             <div class="input-group-prepend">
               <label class="input-group-text option-2" for="inputGroupSelect01">Currency</label>
@@ -347,7 +347,7 @@
             </select>
           </div>
         </div>
-        <div class="px-5 py-0 my-0">
+        <div class="py-0 my-0">
           <div class="input-group mb-1">
             <div class="input-group-prepend">
               <label class="input-group-text option-3" for="inputGroupSelect01">Location</label>
@@ -361,6 +361,7 @@
           </div>
         </div>
       </div>
+
     </div>
     <div class="d-flex flex justify-content-between bg-charcoal p-3">
       <ul class="d-flex flex-wrap align-items-center footer-bottom-nav w-100">
