mobile:company data display none in mobile

--- a/index.html
+++ b/index.html
@@ -267,9 +267,9 @@
 
   </main>
   <footer class="container-fluid p-0">
-    <div class="row row-cols-1 row-cols-lg-3 justify-content-between">
+    <div class="row row-cols-1 row-cols-md-3 justify-content-between">
       <!-- about the company -->
-      <div class="text-light p-md-4">
+      <div class="text-light p-md-4 d-none d-md-block">
         <div class="text-center">
           <img src="./assets/logo.svg" alt="logo">
           <p class="font-weight-bolder mt-3">ZATTIX</p>
