style:body background-color removed and added footer background-color

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
       </div>
     </section>
     <!-- main products section -->
-    <section class="container-fluid bg-light product-section">
+    <section class="container bg-light product-section">
       <div class="d-flex">
         <img src="./" alt="">
         <h3>Piano</h3>
