product:product img height and width fix

--- a/index.html
+++ b/index.html
@@ -165,91 +165,24 @@
     </section>
     <!-- main products section -->
     <section class="container bg-light product-section">
-      <div class="d-flex">
-        <img src="./" alt="">
+      <div class="d-flex product-heading">
         <h3>Piano</h3>
         <p>Grand, Upright, Electronic</p>
       </div>
       <div class="row row-cols-2 row-cols-md-2 row-cols-lg-3 row-cols-xl-4 align-content-center">
         <div class="product-card">
-          <img src="./assets/piano/piano-1.jpg" alt="piano">
-          <h4>Piano</h4>
-          <p>New</p>
-          <p>Fromz San Francisco, US</p>
-          <div class="d-flex justify-content-between">
-            <button>+</button>
-            <button>1380$</button>
+          <div class="product-img-container">
+            <img src="./assets/piano/piano-1.jpg" class="product-img" alt="piano photo">
           </div>
-        </div>
-        <div class="product-card">
-          <img src="./assets/piano/piano-1.jpg" alt="piano">
-          <h4>Piano</h4>
-          <p>New</p>
-          <p>Fromz San Francisco, US</p>
-          <div class="d-flex justify-content-between">
-            <button>+</button>
-            <button>1380$</button>
+          <div class="product-card-bottom">
+            <svg class="add-svg" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMinYMin meet" height="40"
+              width="40" viewBox="0 0 37 37" data-testid="circular-plus-button-selected" class="css-pn6ihi">
+              <circle class="css-15t031h" cx="18" cy="18" r="17" stroke="#121212" fill="#fff" stroke-width="1.5" />
+              <line class="css-15t031h" x1="11" y1="18" x2="25" y2="18" stroke-width="2" stroke="#121212" />
+              <line class="css-15t031h" x1="18" y1="11" x2="18" y2="25" stroke-width="2" stroke="#121212" />
+            </svg>
           </div>
-        </div>
-        <div class="product-card">
-          <img src="./assets/piano/piano-1.jpg" alt="piano">
-          <h4>Piano</h4>
-          <p>New</p>
-          <p>Fromz San Francisco, US</p>
-          <div class="d-flex justify-content-between">
-            <button>+</button>
-            <button>1380$</button>
-          </div>
-        </div>
-        <div class="product-card">
-          <img src="./assets/piano/piano-1.jpg" alt="piano">
-          <h4>Piano</h4>
-          <p>New</p>
-          <p>Fromz San Francisco, US</p>
-          <div class="d-flex justify-content-between">
-            <button>+</button>
-            <button>1380$</button>
-          </div>
-        </div>
-        <div class="product-card d-none d-lg-block">
-          <img src="./assets/piano/piano-1.jpg" alt="piano">
-          <h4>Piano</h4>
-          <p>New</p>
-          <p>Fromz San Francisco, US</p>
-          <div class="d-flex justify-content-between">
-            <button>+</button>
-            <button>1380$</button>
-          </div>
-        </div>
-        <div class="product-card d-none d-lg-block">
-          <img src="./assets/piano/piano-1.jpg" alt="piano">
-          <h4>Piano</h4>
-          <p>New</p>
-          <p>Fromz San Francisco, US</p>
-          <div class="d-flex justify-content-between">
-            <button>+</button>
-            <button>1380$</button>
-          </div>
-        </div>
-        <div class="product-card d-none d-xl-block">
-          <img src="./assets/piano/piano-1.jpg" alt="piano">
-          <h4>Piano</h4>
-          <p>New</p>
-          <p>Fromz San Francisco, US</p>
-          <div class="d-flex justify-content-between">
-            <button>+</button>
-            <button>1380$</button>
-          </div>
-        </div>
-        <div class="product-card d-none d-xl-block">
-          <img src="./assets/piano/piano-1.jpg" alt="piano">
-          <h4>Piano</h4>
-          <p>New</p>
-          <p>Fromz San Francisco, US</p>
-          <div class="d-flex justify-content-between">
-            <button>+</button>
-            <button>1380$</button>
-          </div>
+
         </div>
       </div>
 
