product:product condition used or new on top left of image

--- a/index.html
+++ b/index.html
@@ -170,10 +170,10 @@
         <p>Grand, Upright, Electronic</p>
       </div>
       <div class="row row-cols-2 row-cols-md-2 row-cols-lg-3 row-cols-xl-4 align-content-center">
-        <div class="product-card">
-          <div class="product-img-container">
+        <div class="product-card ">
+          <div class="product-img-container position-relative">
             <img src="./assets/piano/piano-1.jpg" class="product-img" alt="piano photo">
-            <span>New</span>
+            <span class="top left position-absolute p-2 bg-charcoal rounded bg-red text-light px-4">New</span>
           </div>
           <div class="product-card-bottom">
             <div class="add-svg-container">
