product:opacity classes for the product origin and condition

--- a/index.html
+++ b/index.html
@@ -173,7 +173,8 @@
         <div class="product-card ">
           <div class="product-img-container position-relative">
             <img src="./assets/piano/piano-1.jpg" class="product-img" alt="piano photo">
-            <span class="top left position-absolute p-2 bg-charcoal rounded bg-red text-light px-4">New</span>
+            <span class="top left position-absolute p-2 bg-charcoal rounded bg-red text-light px-4 op-9">New</span>
+            <span class="bottom right small position-absolute p-2 rounded bg-red text-light px-4 op-9">Paris</span>
           </div>
           <div class="product-card-bottom">
             <div class="add-svg-container">
@@ -209,7 +210,8 @@
           <img src="./assets/logo.svg" alt="logo">
           <p class="font-weight-bolder mt-3">ZATTIX</p>
         </div>
-        <p class="d-none d-md-block">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia asperiores nobis
+        <p class="px-md-4 d-none d-md-block">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia asperiores
+          nobis
           voluptatum blanditiis ipsa
           ut
           dolores soluta voluptates voluptate. Perferendis temporibus perspiciatis iste itaque consequuntur, fugiat
