--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         <p>Grand, Upright, Electronic</p>
       </div>
       <div class="row row-cols-2 row-cols-md-2 row-cols-lg-3 row-cols-xl-4 align-content-center">
-        <div class="product-card ">
+        <div class="product-card position-relative ">
           <div class="product-img-container position-relative">
             <img src="./assets/piano/piano-1.jpg" class="product-img" alt="piano photo">
             <span class="top left position-absolute p-2 bg-charcoal rounded bg-red text-light px-4 op-9">New</span>
@@ -182,6 +182,9 @@
                 <path class="add-svg-path"
                   d="M 8 1 C 4.139959 1 1.0000428 4.1398846 1 8 C 0.99997942 11.860115 4.1399146 15 8 15 C 11.860086 15 15.00002 11.860115 15 8 C 14.999957 4.1398846 11.860041 1 8 1 z M 8 2 C 11.319604 2 13.999963 4.6803455 14 8 C 14.000018 11.319654 11.319644 14 8 14 C 4.6803565 14 1.9980292 11.319654 1.9980469 8 C 1.9980837 4.6803455 4.6803952 2 8 2 z M 7.9863281 4.0039062 A 0.50005001 0.50005001 0 0 0 7.4941406 4.5117188 L 7.5 7.5039062 L 4.5039062 7.5097656 A 0.50095123 0.50095123 0 0 0 4.5058594 8.5117188 L 7.5 8.5058594 L 7.5058594 11.5 A 0.50005001 0.50005001 0 1 0 8.5058594 11.5 L 8.5019531 8.5039062 L 11.494141 8.4980469 A 0.50005001 0.50005001 0 1 0 11.492188 7.4980469 L 8.5 7.5039062 L 8.4960938 4.5117188 A 0.50005001 0.50005001 0 0 0 7.9863281 4.0058594 L 7.9863281 4.0039062 z " />
               </svg>
+              <button class="btn btn-danger position-absolute right mr-3 px-5 text-center">
+                230$
+              </button>
             </div>
 
           </div>
