footer:padding top 1rem for the entire footer

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <header class="container-fluid">
     <!-- navbar top -->
     <nav
-      class="navbar navbar-light navbar-expand-md d-md-flex align-items-md-center bg-charcoal fixed-top w-100 p-1 p-lg-2">
+      class="navbar navbar-light navbar-expand-md d-md-flex align-items-md-center bg-charcoal fixed-top w-100 p-1 p-lg-2 w-100">
       <a class="navbar-brand" href="#"><i class="fa fa-shopping-basket red mr-2"></i><span
           class="text-light mr-1 mr-lg-5">ZATTIX</span></a>
       <!-- toggle button -->
@@ -43,7 +43,6 @@
           <li class="nav-item"><a class="nav-link" href="#"><i class="fa fa-shopping-cart grey pr-1"></i><span
                 class="grey">PURCHASE LIST</span></a>
           </li>
-
         </ul>
         <button class="py-1 mt-3 px-5 px-md-2 px-lg-5 py-lg-2 m-0 ml-lg-4 my-sm-2 rounded border-0 bg-red text-light"
           type="button">POST
@@ -65,6 +64,7 @@
         </div>
       </div>
     </nav>
+    </div>
   </header>
   <main class="container-fluid p-0">
     <!-- top category info -->
@@ -205,7 +205,7 @@
     </section>
 
   </main>
-  <footer class="container-fluid p-0">
+  <footer class="container-fluid p-0 pt-3">
     <div class="row row-cols-1 row-cols-md-3 justify-content-between">
       <!-- about the company -->
       <div class="text-light p-md-4 d-none d-md-block">
