fix:footer p-0 and pt-3 both given issue fixed

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
     </section>
 
   </main>
-  <footer class="container-fluid p-0 pt-3">
+  <footer class="container-fluid pt-3">
     <div class="row row-cols-1 row-cols-md-3 justify-content-between">
       <!-- about the company -->
       <div class="text-light p-md-4 d-none d-md-block">
