product:fixing margin top for product para and removing padding for card

--- a/index.html
+++ b/index.html
@@ -170,13 +170,16 @@
         <p>Grand, Upright, Electronic</p>
       </div>
       <div class="row row-cols-2 row-cols-md-2 row-cols-lg-3 row-cols-xl-4 align-content-center">
-        <div class="product-card position-relative ">
+        <div class="product-card position-relative m-3">
           <div class="product-img-container position-relative">
             <img src="./assets/piano/piano-1.jpg" class="product-img" alt="piano photo">
             <span class="top left position-absolute p-2 bg-charcoal rounded bg-red text-light px-4 op-9">New</span>
             <span class="bottom right small position-absolute p-2 rounded bg-red text-light px-4 op-9">Paris</span>
           </div>
           <div class="product-card-bottom">
+            <div>
+              <p class="pl-3">Lorem ipsum Totam beatae eveniet saepe!</p>
+            </div>
             <div class="add-svg-container d-flex justify-content-between">
               <a href="#">
                 <svg class="add-svg" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 16 16">
@@ -185,10 +188,10 @@
                 </svg>
               </a>
               <a href="#">
-                <p class="bg-charcoal text-light align-self-center px-3 py-2">250$</p>
+                <p class="price bg-charcoal text-light align-self-center">250$</p>
               </a>
             </div>
-
+            <button class="btn w-100 btn-danger">BUY</button>
           </div>
 
         </div>
