product:section heading styling with margin h2, text center and colors

--- a/index.html
+++ b/index.html
@@ -165,9 +165,9 @@
     </section>
     <!-- main products section -->
     <section class="container bg-light product-section">
-      <div class="d-flex product-heading">
-        <h3>Piano</h3>
-        <p>Grand, Upright, Electronic</p>
+      <div class="product-heading">
+        <h2 class="font-weight-bold text-center border-bottom m-3">Piano</h2>
+        <p class="font-weight-bold red">Grand, Upright, Electronic</p>
       </div>
       <div class="product-grid">
         <div class="product-card position-relative">
