--- a/search.html
+++ b/search.html
@@ -15,12 +15,11 @@
     integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
 </head>
 
-<body>
-  <!-- header -->
-  <header class="container-fluid px-0">
+<body class="bg-body">
+  <header class="container-fluid">
     <!-- navbar top -->
     <nav
-      class="navbar navbar-light navbar-expand-md d-md-flex align-items-md-center bg-charcoal position-fixed w-100 p-1 p-lg-2">
+      class="navbar navbar-light navbar-expand-md d-md-flex align-items-md-center bg-charcoal fixed-top w-100 p-2 p-lg-2 w-100">
       <a class="navbar-brand" href="#"><i class="fa fa-shopping-basket red mr-2"></i><span
           class="text-light mr-1 mr-lg-5">ZATTIX</span></a>
       <!-- toggle button -->
@@ -35,23 +34,22 @@
           <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" aria-expanded="false" data-toggle="dropdown"
               href="#"><i class="fa fa-th grey"></i>&nbsp;<span class="grey">Collections</span>&nbsp;</a>
             <!-- drop down items in collectons -->
-            <div class="dropdown-menu">
-              <a class="dropdown-item" href="#">First Item</a>
-              <a class="dropdown-item" href="#">Second Item</a>
-              <a class="dropdown-item" href="#">Third Item</a>
+            <div class="dropdown-menu bg-secondary">
+              <a class="dropdown-item" href="#">Piano</a>
+              <a class="dropdown-item" href="#">Violin</a>
+              <a class="dropdown-item" href="#">Drums</a>
             </div>
           </li>
           <li class="nav-item"><a class="nav-link" href="#"><i class="fa fa-shopping-cart grey pr-1"></i><span
                 class="grey">PURCHASE LIST</span></a>
           </li>
-
         </ul>
         <button class="py-1 mt-3 px-5 px-md-2 px-lg-5 py-lg-2 m-0 ml-lg-4 my-sm-2 rounded border-0 bg-red text-light"
           type="button">POST
           AN
           AD</button>
         <!-- navbar end items -->
-        <div class="d-flex flex-row align-items-center d-flex align-items-center px-0 px-md-2">
+        <div class="user d-flex flex-row align-items-center d-flex align-items-center px-0 px-md-2">
           <div class=" mt-4 mt-md-0 flex-nowrap">
             <a href="#">
               <picture class="mx-1"><img src="assets/samrood.jpg" alt="user image photo"></picture>
@@ -66,33 +64,21 @@
         </div>
       </div>
     </nav>
-    <!-- section for md to large screens -->
-    <div>
     </div>
   </header>
-  <main class="container-fluid">
-
+  <main class="container-fluid p-0">
     <!-- top category info -->
-    <div class="row">
-      <div class="container-fluid p-0">
-        <div class="jumbotron mt-5 mb-0" style="text-align: center;">
-          <h1>ZATTIX</h1>
-          <p>Buying and Selling could not be simpler than this</p>
-          <div class="row row-cols-1 row-cols-md-4 justify-content-center">
-            <div class="dropdown d-inline"><button class="btn dropdown-toggle" aria-expanded="false"
-                data-toggle="dropdown" type="button">All Departments </button>
-              <!-- drop down -->
-              <div class="dropdown-menu"><a class="dropdown-item" href="#">First Item</a><a class="dropdown-item"
-                  href="#">Second
-                  Item</a><a class="dropdown-item" href="#">Third Item</a>
-              </div>
-            </div>
-            <input type="search" placeholder="What are you searching for ?" />
-            <a href="search.html" class="btn btn-dark bg-charcoal text-light">Search</a>
-          </div>
-        </div>
+    <div class="jumbotron mt-5 p-3 p-lg-5 mb-0 text-center">
+      <h1 class="text-light">ZATTIX</h1>
+      <p class="text-light">Buying and Selling could not be simpler than this</p>
+      <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 justify-content-center px-2 px-md-3 p-lg-0">
+        <input type="search" placeholder="What are you searching for ?"
+          class="border-light jumbotron-element text-center" />
+        <a href="search.html" class="btn btn-dark bg-charcoal text-light jumbotron-element">Search</a>
       </div>
     </div>
+
+    <!-- main products section -->
     <!-- search page query -->
     <div class="search-main">
       <div>
@@ -281,103 +267,114 @@
         </div>
       </div>
     </div>
-  </main>
 
-  <!-- footer -->
-  <footer class="container-fluid">
-    <div class="row row-cols-1 row-cols-lg-4">
-      <div>
-        <img src="./assets/logo.svg" alt="">
-        <p class=d-inline>ZATTIX</p>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia asperiores nobis voluptatum
-          blanditiis
-          ipsa
+  </main>
+  <footer class="container-fluid pt-3">
+    <div class="row row-cols-1 row-cols-md-3 justify-content-between">
+      <!-- about the company -->
+      <div class="text-light p-md-4 d-none d-md-block">
+        <div class="text-center">
+          <img src="./assets/logo.svg" alt="logo">
+          <p class="font-weight-bolder mt-3">ZATTIX</p>
+        </div>
+        <p class="px-md-4 d-none d-md-block">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia asperiores
+          nobis
+          voluptatum blanditiis ipsa
           ut
-          dolores soluta voluptates voluptate. Perferendis temporibus perspiciatis iste itaque
-          consequuntur,
-          fugiat
+          dolores soluta voluptates voluptate. Perferendis temporibus perspiciatis iste itaque consequuntur, fugiat
           sed
           vero nostrum at!</p>
       </div>
-      <div>
-        <h5>Categoris</h5>
-        <div class="d-flex">
-          <div>
-            <ul>
-              <li>Piano</li>
-              <li>Piano</li>
-              <li>Piano</li>
-              <li>Piano</li>
-              <li>Piano</li>
-              <li>Piano</li>
-            </ul>
-          </div>
-          <div>
-            <ul>
-              <li>Piano</li>
-              <li>Piano</li>
-              <li>Piano</li>
-              <li>Piano</li>
-              <li>Piano</li>
-              <li>Piano</li>
-            </ul>
-          </div>
-        </div>
-      </div>
+
+      <!-- categories -->
       <div>
         <div>
-          <ul>
-            <a href="index.html">
-              <li>Home</li>
-            </a>
-            <li>Cart</li>
-            <li>My Account</li>
-            <li>Orders</li>
-            <li>FAQ</li>
-            <li>Terms and Conditions</li>
-            <li>Contact Us</li>
-            <li>License</li>
+          <h5 class="text-center font-weight-bold red">CATEGORIES</h5>
+          <ul class="d-flex justify-content-around">
+            <li class="btn btn-outline-danger text-light">PIANO</li>
+            <li class="btn btn-outline-danger text-light">VIOLIN</li>
+            <li class="btn btn-outline-danger text-light">GUITAR</li>
+          </ul>
+        </div>
+        <!-- nav -->
+        <div>
+          <h5 class="font-weight-bold red text-center">QUICK LINKS</h5>
+          <nav>
+            <ul class="d-grid g-c-8 footer-nav-ul">
+              <li class="btn-link text-light">HOME</li>
+              <li class="btn-link text-light">CART</li>
+              <li class="btn-link text-light">MY ACCOUNT</li>
+              <li class="btn-link text-light">ORDERS</li>
+              <li class="btn-link text-light">FAVOURITES</li>
+              <li class="btn-link text-light">CONTACT US</li>
+              <li class="btn-link text-light">FAQ</li>
+              <li class="btn-link text-light">LICENSE</li>
+            </ul>
+          </nav>
+        </div>
+        <div>
+          <h5 class="font-weight-bold red text-center">Reach out to us</h5>
+          <ul class="d-flex justify-content-center">
+            <li><i class="px-3 text-light fab fa-facebook"></i></li>
+            <li><i class="px-3 text-light fab fa-twitter"></i></li>
+            <li><i class="px-3 text-light fab fa-linkedin"></i></li>
+            <li><i class="px-3 text-light fab fa-instagram"></i></li>
+            <li><i class="px-3 text-light fab fa-tumblr"></i></li>
           </ul>
         </div>
       </div>
-      <div>
-        <form action="#" class="d-flex">
-          <div>
-            <label for="country">
-              COUNTRY
-            </label>
-            <label for="language">
-              LANGUAGE
-            </label>
-            <label for="currency">
-              CURRENCY
-            </label>
+      <!-- language,currency and country -->
+      <div class="footer-options">
+        <div class="py-0 my-0 ">
+          <div class="input-group mb-1">
+            <div class="input-group-prepend">
+              <label class="input-group-text" for="inputGroupSelect01">Language</label>
+            </div>
+            <select class="custom-select" id="inputGroupSelect01">
+              <option selected>English</option>
+              <option value="1">Hindi</option>
+              <option value="2">Malayalam</option>
+              <option value="3">China</option>
+            </select>
           </div>
-          <div>
-            <input type="text" id="country" placeholder="India">
-            <input type="text" id="language" placeholder="English">
-            <input type="text" id="currency" placeholder="$ Dollar">
+        </div>
+        <div class="py-0 my-0">
+          <div class="input-group mb-1">
+            <div class="input-group-prepend">
+              <label class="input-group-text option-2" for="inputGroupSelect01">Currency</label>
+            </div>
+            <select class="custom-select" id="inputGroupSelect02">
+              <option selected>Rupees</option>
+              <option value="1">Dollar</option>
+              <option value="2">Euro</option>
+              <option value="3">Yen</option>
+            </select>
           </div>
-        </form>
+        </div>
+        <div class="py-0 my-0">
+          <div class="input-group mb-1">
+            <div class="input-group-prepend">
+              <label class="input-group-text option-3" for="inputGroupSelect01">Location</label>
+            </div>
+            <select class="custom-select" id="inputGroupSelect03">
+              <option selected>India</option>
+              <option value="1">America</option>
+              <option value="2">China</option>
+              <option value="3">Africa</option>
+            </select>
+          </div>
+        </div>
       </div>
+
     </div>
-    <div class="d-md-flex justify-content-between">
-      <div>
-        <ul class="d-md-flex flex-nowrap">
-          <li>Zattix.com</li>
-          <li>Created by Samrood Ali</li>
-          <li>Microver Project</li>
-          <li>Copyright</li>
-          <li>All Rights Reserved By Mohammed Awad</li>
-        </ul>
-      </div>
-      <div>
-        <i class="fab  red fa-facebook"></i>
-        <i class="fab  red fa-twitter"></i>
-        <i class="fab  red fa-linkedin"></i>
-        <i class="fab  red fa-instagram"></i>
-        <i class="fab  red fa-tumblr"></i>
-      </div>
+    <div class="d-flex flex justify-content-between bg-charcoal p-3">
+      <ul class="d-flex flex-wrap align-items-center footer-bottom-nav w-100">
+        <li class="small grey">Copyright 2021</li>
+        <li class="small grey">Microverse capstone project</li>
+        <li class="small grey">SAMROOD ALI project</li>
+        <li class="small grey">designed by MOHAMMED AWAD</li>
+      </ul>
+
     </div>
   </footer>
 
