product:grid-gap responsive resizing from mobile to tablet to desktop

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <header class="container-fluid">
     <!-- navbar top -->
     <nav
-      class="navbar navbar-light navbar-expand-md d-md-flex align-items-md-center bg-charcoal fixed-top w-100 p-2 p-lg-2 w-100">
+      class="navbar navbar-light navbar-expand-md d-md-flex align-items-md-center bg-charcoal fixed-top w-100 p-2 p-md-1 p-lg-2 w-100">
       <a class="navbar-brand" href="#"><i class="fa fa-shopping-basket red mr-2"></i><span
           class="text-light mr-1 mr-lg-5">ZATTIX</span></a>
       <!-- toggle button -->
@@ -164,7 +164,7 @@
       </div>
     </section>
     <!-- main products section -->
-    <section class="container bg-light product-section">
+    <section class="container-fluid p-lg-5 bg-light product-section">
       <div class="product-heading">
         <h2 class="font-weight-bold text-center border-bottom m-3">Piano</h2>
         <p class="font-weight-bold red">Grand, Upright, Electronic</p>
