footer:fixed shaky footer with padding and margin for row and container

--- a/index.html
+++ b/index.html
@@ -64,7 +64,6 @@
         </div>
       </div>
     </nav>
-    </div>
   </header>
   <main class="container-fluid p-0">
     <!-- top category info -->
@@ -114,7 +113,7 @@
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 justify-content-center">
               <div>
                 <img src="./assets/piano/miguel-dominguez-5yDL5rOKrUM-unsplash.jpg" alt="picture of piano category"
-                  class="carousel-img" class="carousel-img">
+                  class="carousel-img">
                 <span class="sr-only">Photo by louis hansel</span>
 
               </div>
@@ -135,7 +134,7 @@
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 justify-content-center">
               <div>
                 <img src="./assets/drums/chris-bulilan-4ktLEcM4PuA-unsplash.jpg" alt="picture of piano category"
-                  class="carousel-img" class="carousel-img">
+                  class="carousel-img">
                 <span class="sr-only">Photo by chris bulilan</span>
               </div>
               <div class="carousel-texts px-3">
@@ -377,8 +376,8 @@
     </section>
 
   </main>
-  <footer class="container-fluid pt-3">
-    <div class="row row-cols-1 row-cols-md-3 justify-content-between">
+  <footer class="container-fluid pt-3 px-0">
+    <div class="row mx-0 row-cols-1 row-cols-md-3 justify-content-between">
       <!-- about the company -->
       <div class="text-light p-md-4 d-none d-md-block">
         <div class="text-center">
